sense/prometheus.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus
  name: prometheus
  namespace: sense
spec:
  ports:
    - port: 8443
      protocol: TCP
      targetPort: sidecar
  selector:
    app: prometheus
    cluster: sense.prometheus
  type: ClusterIP
